Add processing for missing fields in ImageResource

If any of sizes or purpose are missing in ImageResource,
provide default values for 'purpose' and 'sizes'.

Bug: 868875
Change-Id: I2e88144e1d098a18c740ffeaf9a2fb474db031a1
Reviewed-on: https://chromium-review.googlesource.com/c/1244176
Commit-Queue: Jaeyong Bae <jdragon.bae@gmail.com>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Reviewed-by: Mugdha Lakhani <nator@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597175}
Former-commit-id: 6f43982d4c6c5da759eb36af5aef875b55a19a41